--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
+    "object-path": "^0.11.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^6.1.0",
